hphp/test/zend/good/ext/gd/tests/imagecolorallocate_variation2.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if(!extension_loaded('gd')) {
    die('skip gd extension is not loaded');
}
if(!function_exists('imagecreatetruecolor')) {
    die('skip imagecreatetruecolor function is not available');
}
}
